# market-value-pulse

./: .dockerignore  .gitignore  Dockerfile.api  README.md  docker-compose.yml  pyproject.toml
config/catalog/: datasets.json  field_descriptions.json
config/competitions/: GB1.jsonl
config/features/: scoring.json
config/leagues/: GB1.json
config/whoscored/: competitions.json
data/serving/: match_impacts.parquet  materialize_manifest.json  player_valuation_predictions.parquet  players.parquet  serving_build_summary.json  valuation_history.parquet
database/: schema.sql
dbt/: .user.yml  README.md  dbt_project.yml  profiles.yml
dbt/tests/: assert_forecast_interval_order.sql  assert_probability_bounds.sql  assert_rating_bounds.sql
docs/: architecture.md  data-catalog.md  enrichment-and-replay.md  rating-model.md  stateful-pipeline.md  transfermarkt-normalization.md  valuation-model.md  whoscored-ingestion.md
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
metadata/: catalog.json  lineage.json
models/features/: README.md
models/ratings/: README.md
scripts/: migrate-existing-data.sh
src/: cli.py
src/api/: __init__.py  app.py  profile_store.py  repository.py
src/catalog/: __init__.py  builder.py  definitions.py  models.py  validators.py
src/database/: __init__.py  (+1 more)
tests/: test_common.py  test_enrichment_replay.py  test_entity_serving.py  test_ratings_builder.py  test_transfermarkt_normalize.py  test_transfermarkt_parse.py  test_valuation_features.py  test_whoscored.py
(+93 files in other folders)
